--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "mongoose": "^8.7.1",
     "nodemailer": "^6.9.15",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -53,6 +54,7 @@
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.16",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
