--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "graphql": "^16.9.0",
