feat: add startVideoCall mutation and videoCallStarted subscription in ChatResolver
- Implemented startVideoCall mutation in ChatResolver to start video calls.
- Added ideoCallStarted subscription to notify users of incoming video calls.
- Integrated isUserInParticipants helper function to validate if a user is part of the participants.
- Updated LivekitService to include isRoomActive method for checking active room status.
- Created LivekitModule for service initialization and dependency management.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ejs": "^3.1.10",
     "graphql": "^16.9.0",
     "graphql-redis-subscriptions": "^2.6.1",
+    "livekit-server-sdk": "^1.2.7",
     "mongoose": "^8.7.1",
     "nodemailer": "^6.9.15",
     "reflect-metadata": "^0.2.0",
